--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -1,15 +1,16 @@
 .navbar {
   overflow: hidden;
   background-color: #EEEEEE;
-  position: fixed; /* Set the navbar to fixed position */
+  position: sticky; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  z-index: 100;
 }
 
 /* Links inside the navbar */
 .navbar a {
   float: left;
-  display: block;
+  display: flex;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
