--- a/client/src/page/menu.css
+++ b/client/src/page/menu.css
@@ -21,13 +21,16 @@
      
 }
 .search{
+    margin-top: 30px;
     color: black;
     display: flex;
     position: relative;
-    left: 30%;
+    left: 25%;
+
 }
 .searchContent{
     margin: 0px;
+    width: 800px;
 }
 .searchButton{
     color: #F78223;
@@ -42,4 +45,6 @@
     align-items: center;
     border: none;
     cursor: pointer;
+    width: 100px;
+    border-radius: 5px;
 }
