--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -4,7 +4,8 @@
   position: sticky; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  z-index: 100;
+  
+  z-index: 101;
 }
 
 /* Links inside the navbar */
@@ -56,23 +57,26 @@
   position: relative;
   top:100px;
   width: auto; 
+  padding-top: 50px;
   z-index: -1;
 }
 .accountIcon{ 
-  float: right;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 12px,16px;
-  text-decoration: #F78223;
-  width: 50px;
-  height: 50px;
- 
-  font-size: 16px;
-  color: #F78223;
-  background-color:#EEEEEE; 
-  align-items: center;
-  border: none;
-  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 40px;
+  height: 40px; 
 
+}
+.juiceIcon{ 
+  position: relative;
+  display: block;
+  width: 50%;
+  height: 50%;
+  cursor:default
+}
+.iconTab{
+  position:absolute; 
+  display: block;
+  z-index:900;
 }
