--- a/client/src/page/platFormMedia.css
+++ b/client/src/page/platFormMedia.css
@@ -10,19 +10,21 @@
 }  
 
 
-.container{ 
-	padding-top: 100px; 
+.container{  
+	background-color: #EEEEEE; 
 }
 .media{ 
 	display: flex;
 	justify-content:start;
 	flex-flow: wrap;
-	padding:12px,18px;
+
 
 }
 .list{
-	width: 25%;
-	 
+	width: 200px;
+	 height: 200px;
+	 margin: 100px;
+
 	
  }
 
@@ -54,6 +56,8 @@ img{
 	
 }
 .platFormName{
-	font-size: large;
-	color: black;
+	font-size:smaller;
+	color: rgb(148, 21, 21); 
+	text-align: center;
+	font-size: 12px;
 }
