--- a/client/src/header/showPlatformLIst.css
+++ b/client/src/header/showPlatformLIst.css
@@ -1,23 +1,58 @@
-.object{
+
+.list{  
     position: relative;
-   
-    width: 100px;
-    height: 50px;
+    display: block; 
+    height: auto;
+    width: auto;
+    border-color: rgb(255, 255, 255);
+    border-style: solid; 
 }
-.list{ 
-    padding-bottom: 100px;
-    position: relative;
-    display: flex; 
-    padding: 20px;
+.repName{ 
+    font-size: 28px;
 }
-.board{
+ 
+.board{ 
+
     display: block;
     position: relative; 
     padding-top: 100px; 
-    background-color: red; 
+    background-color: #F78223;
     width: 50%;
     margin:0 auto
 }
-.reputation{
-    padding-left: 700px;
+.reputation{ 
+    position: absolute;
+    display: block;
+    right: 0;
+    top:20%;
+    width: 200px
+    ;
 }
+.repoBar{
+    margin-top: 20px;
+}
+.boardTitle{ 
+    font-size: 40px;
+    margin: 0 auto; 
+    text-align: center;
+} 
+.box-text   { 
+    display: flex;
+    width:400px; 
+    text-decoration: black;
+}
+.box-text h4 { 
+            width:200px; 
+            text-decoration: black; text-align: center;
+        }
+.boxbtn{ 
+    
+    color: #ffffff;
+    background-color:#df2e16;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    height: 50px;
+    border-radius: 5px;
+} 
