--- a/client/src/page/menu.css
+++ b/client/src/page/menu.css
@@ -1,45 +1,50 @@
 .menu{ 
-   display: block;
-   position: absolute;
-   top:100px;
-   left: 0%;
-   height: 100%;
-   width: 100%;
-   background-color: #EEEEEE; 
-   text-align: center;
-}
-.item{
-    position: relative;
     display: block;
+    position: absolute;
+    top:100px;
+    left: 0%;
+    height: 100%;
+    width: 100%;
     background-color: #EEEEEE; 
-    width:100%; 
-    float:left;
-}
-.tagFilter{
-    width: 100%; 
-    background-color: #918f8f;  
-     
-}
-.search{
-    color: black;
-    display: flex;
-    position: relative;
-    left: 30%;
-}
-.searchContent{
-    margin: 0px;
-}
-.searchButton{
-    color: #F78223;
-    background-color: #EEEEEE;
-    float: right;
-    
     text-align: center;
-    text-decoration: #ffffff;  
-    
-    color: #ffffff;
-    background-color:#F78223;
-    align-items: center;
-    border: none;
-    cursor: pointer;
-}
+ }
+ .item{
+     position: relative;
+     display: block;
+     background-color: #EEEEEE; 
+     width:100%; 
+     float:left;
+ }
+ .tagFilter{
+     width: 100%; 
+     background-color: #918f8f;  
+      
+ }
+ .search{
+     margin-top: 30px;
+     color: black;
+     display: flex;
+     position: relative;
+     left: 25%;
+ 
+ }
+ .searchContent{
+     margin: 0px;
+     width: 800px;
+ }
+ .searchButton{
+     color: #F78223;
+     background-color: #EEEEEE;
+     float: right;
+     
+     text-align: center;
+     text-decoration: #ffffff;  
+     
+     color: #ffffff;
+     background-color:#F78223;
+     align-items: center;
+     border: none;
+     cursor: pointer;
+     width: 100px;
+     border-radius: 5px;
+ }
