--- a/client/src/singlePlatform/singlePlatForm.css
+++ b/client/src/singlePlatform/singlePlatForm.css
@@ -1,9 +1,50 @@
+.rankRepo{
+    color: rgb(255, 0, 0);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.reputationValue{
+    color:red;
+    position: absolute;
+    right:0;
+    height: 0
+}
+.rankList{
+    margin-top: 20px;
+    margin-bottom: 20px;   
+    height: 100px;
+}.rankBoard{
+    border-color: grey;
+    border-style: solid;
+    border-radius: 5px;
+    position: absolute;
+    display: block;
+    right:20px;
+    top:50%;
+    width: 200px; 
+    background-color:aliceblue; 
+}
+.rankName{
+    color:  #e49132; 
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.rankIcon{
+    width: 50px;
+    height: 40px;
+}
+.rankBoardTitle{
+    height: 40px;
+    background-color: grey;
+    text-align: center;
+    padding-top: 20px;
+}
 .header{
     background-color: aliceblue;
     
     width: 100%;
     background-color: #e49132; 
-    padding-top: 250px;
+    padding-top: 80px;
 }
 .platFormButton{
     
@@ -93,3 +134,4 @@
    width: 70%; 
    font-size: 19px;
 }
+
