--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -80,3 +80,19 @@
   display: block;
   z-index:900;
 }
+
+.create{
+  position: relative;
+  float: right;
+  margin-right:50px; 
+  height: auto;
+  background-color:#e49132; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center; 
+  display: inline-block;
+  font-size: 16px;
+  height: 70%;
+  width:15%
+}
