--- a/client/src/answer_question.css
+++ b/client/src/answer_question.css
@@ -1,31 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-* {
-  font-family: "Verdana", cursive, sans-serif;
-  color: #ffffff;
-}
 
-body {
-  overflow: auto;
-  background-color: #7cc6fe; 
-}
-
-.app {
+.answering {
+ 
   background-color: #252d4a;
-  width: 450px;
-  min-height: 200px;
-  height: min-content;
+   
+  margin-top: 300px;
+  width: 50%;
   border-radius: 15px;
   padding: 20px;
   box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-  display: flex;
+  display: block;
+  margin: 0 auto;
   justify-content: space-evenly;
+}
+.answering button{
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #252d4a;
+  border-radius: 15px;
+  display: flex;
+  padding: 5px;
+  justify-content: flex-start;
+  align-items: center;
+  border: 5px solid #234668;
+  cursor: pointer;  
+  margin-bottom: 30px;
 }
 
 .score-section {
@@ -70,19 +69,7 @@ body {
   justify-content: space-between;
 }
 
-button {
-  width: 100%;
-  font-size: 16px;
-  color: #ffffff;
-  background-color: #252d4a;
-  border-radius: 15px;
-  display: flex;
-  padding: 5px;
-  justify-content: flex-start;
-  align-items: center;
-  border: 5px solid #234668;
-  cursor: pointer;
-}
+
 
 .correct {
   background-color: #2f922f;
@@ -92,14 +79,3 @@ button {
   background-color: #ff3333;
 }
 
-button:hover {
-  background-color: #555e7d;
-}
-
-button:focus {
-  outline: none;
-}
-
-button svg {
-  margin-right: 5px;
-}
