--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,20 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  * {
-    font-family: "Verdana", cursive, sans-serif;
-    color: #ffffff;
-  }
-  
-  body {
-    overflow: auto;
-    background-color: #EEEEEE; 
-    height: 100%;
-  }
-  li{
-    list-style-type:none  }
-  
+margin: 0;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+* {
+font-family: "Verdana", cursive, sans-serif;
+text-decoration:none
+}
+    
+body {
+overflow: auto;
+background-color: #EEEEEE; 
+height: 100%;
+}
+li{
+list-style-type:none  }
