--- a/client/src/header/iconTab.css
+++ b/client/src/header/iconTab.css
@@ -17,6 +17,7 @@
   }
   
   .nav-menu {
+    color: white;
     background-color: #F78223;
     width: 250px;
     height: 100vh;
@@ -73,4 +74,6 @@
   
   span {
     margin-left: 16px;
+    color: white;
   }
+  
