--- a/client/src/header/iconTab.css
+++ b/client/src/header/iconTab.css
@@ -41,11 +41,11 @@
     padding: 8px 0px 8px 16px;
     list-style: none;
     height: 60px;
+    color:white
   }
   
   .nav-text a {
-    text-decoration: none;
-    color: #F78223;
+    text-decoration: none; 
     font-size: 18px;
     width: 95%;
     height: 100%;
