--- a/client/src/header/signInPop.css
+++ b/client/src/header/signInPop.css
@@ -1,17 +1,22 @@
 .signUpBoard{
 
-  background-color: orange;
-  width: 700px;
+  background-color: #fc7e18;;
+  width: 40%;
   height: 500px;
-  display: block;
-  margin: 0 auto;
+  display: block; 
+  position: absolute;   
+  left:30%;
+  top:170px;
+  border-style: solid;
+  border-radius: 25px;
+  border-color:#fc7e18;;
 }
 .SIGNUP{
     font-size: 38px;  
     padding-left: 20px;
  } 
   input{  
-      background-color: white;
+    background-color: white;
     display: block;
     margin: 0 auto;
     outline-style: none ;
@@ -37,16 +42,19 @@
   text-align: center;
   padding: 12px,16px;
   text-decoration: white;
-  width: 25px;
-  height: 25px;
- 
+  width: 30px;
+  height:  30px;
+  border-radius: 25px;
+  border-color:#F78223;;
   font-size: 16px;
   color: #ffffff;
-  background-color: black; 
+  background-color: #918f8f;; 
   align-items: center;
   border: none;
   cursor: pointer; 
   float: right;
+  left:10px;
+  bottom: 10px;
   
 }
 .SignIn{ 
@@ -61,9 +69,11 @@
   margin: 0 auto;
   font-size: 16px;
   color: #ffffff;
-  background-color: black; 
+  background-color:#918f8f;; 
   align-items: center;
   border: none;
   cursor: pointer; 
   top: 400px;
+  border-radius: 15px;
+  border-color: #918f8f;; 
 }
