--- a/client/src/page/platFormMedia.css
+++ b/client/src/page/platFormMedia.css
@@ -21,13 +21,7 @@
 
 
 }
-.list{
-	 width: 300px;
-	 height: 200px;
-	 margin: 50px;
 
-	
- }
 
 
 img{  
@@ -56,9 +50,16 @@ img{
 	  z-index: 100;
 	
 }
-.platFormName{
-	font-size:smaller;
-	color: rgb(148, 21, 21); 
-	text-align: center;
-	font-size: 12px;
+.PFLplatFormName{ 
+	color: rgb(245, 138, 39);  
+	font-size: 21px;
+}
+.PlatFormlist{
+	position: relative;
+	width: 300px;
+	height: 200px;
+	padding-right: 50px;
+	padding-left: 50px;
+	
+	padding-bottom: 100px;
 }
