--- a/client/src/singlePlatform/singlePlatForm.css
+++ b/client/src/singlePlatform/singlePlatForm.css
@@ -110,7 +110,7 @@
 }
 .item{ 
     margin-top: 50px;
-    background-color:  #ffffff; 
+    background-color:#eeeeec;
     text-decoration: black;
     height: 300px; 
     font-size: 50px;
