--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -32,12 +32,11 @@
   align-self: center; 
   z-index: 100;
 }
-.account {
+.HeaderAccount {
   float: right;
   display: block;
   color: black;
-  text-align: center;
-  padding: 12px,16px;
+  text-align: center; 
   text-decoration: #F78223;
   width: auto;
   height: 100%;
