--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,17 +4,18 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
 -webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
+-moz-osx-font-smoothing: grayscale !important;;
 }
 * {
-font-family: "Verdana", cursive, sans-serif;
+font-family: "Verdana", cursive, sans-serif!important;;
 text-decoration:none
 }
     
 body {
 overflow: auto;
-background-color: #EEEEEE; 
+background-color: #EEEEEE!important;; 
 height: 100%;
 }
 li{
 list-style-type:none  }
+ 
