--- a/client/src/newQuiz/quizEdit.css
+++ b/client/src/newQuiz/quizEdit.css
@@ -1,4 +1,4 @@
-.editQuizeditBoard{
+/* .editQuizeditBoard{
     display: block;
     position: relative;  
     background-color: grey; 
@@ -46,4 +46,4 @@
    direction: ltr;
    background-color: grey;
    margin-top: 20px;
-}
+} */
