--- a/client/src/newQuiz/quizEditAfter.css
+++ b/client/src/newQuiz/quizEditAfter.css
@@ -1,7 +1,7 @@
 .editQuizeditBoard{
     display: block;
     position: relative;  
-    background-color: grey; 
+    background-color: rgb(180, 177, 177); 
     margin:0 auto; 
     width: 90%;
 }
@@ -24,21 +24,23 @@
     margin-left: 20px;
     border: none;
     cursor:pointer;
+    color: white
 } 
 .editListButton button{ 
-    background-color: orange;
+    background-color: #F78223;
 }
-.editQuizOption{
+.editQuizOption{ 
+    margin-top: 20px;
     margin-left: 0;
     width: 80%;
+    margin-bottom: 20px;
 }
 .editQuestionList{
     width: 200px;
     height: 200px;
-    background-color: orange;
+    background-color: #F78223;
     position: absolute;
-    top:20%;
-    opacity: 0.7;
+    top:20%; 
     margin-left: 20px;
 }
 .editQuestionList button{
@@ -46,4 +48,21 @@
    direction: ltr;
    background-color: grey;
    margin-top: 20px;
+}
+li{
+    list-style-type:circle
+}
+.QEAeditForm{
+    margin-top: 40px;
+}
+.QEAsubmit{
+    width: 200px;
+    height: 100px;
+    background-color: #F78223;
+    color: white;
+    display: block;
+    margin: 0 auto;
+    font-size: 28px;
+}.QEAedit{
+    color: white;
 }
