--- a/client/src/newQuiz/quizInit.css
+++ b/client/src/newQuiz/quizInit.css
@@ -2,9 +2,23 @@
 .initQuizeditBoard{
     display: block;
     position: relative;  
-    background-color: grey; 
-    margin:0 auto; 
-    width: 50%;
+    background-color: #fc7e18;;
+    margin:0 auto;  
+    width: 60%; 
+    margin-top: 5%;
+    border-style: solid;
+  border-radius: 25px;
+  border-color:#fc7e18;;
+
+}
+.initeditInput{
+    color:white;
+    margin-top: 20px;
+
+
+}
+.timeInit{
+    width: 20%;
 }
 .quizInitIcon{  
    margin-top: 5%;
@@ -13,9 +27,9 @@
     height: 60px; 
     width: 120px;
 }
-.initQuizTitle{ 
-    margin-left: 0;
+.initQuizTitle{  
     width: 100%;
+    margin-left: 0;
 }
 .quizDiscription{ 
     size:130; 
@@ -28,5 +42,5 @@
     margin-left: 20px;
 }
 .timeQuizInit  {
-    width: 10%
+    width: 40%
 }
