--- a/client/src/answer_question.css
+++ b/client/src/answer_question.css
@@ -98,3 +98,9 @@
   color:white;
   border-style: none;
 } 
+.Timer_container{
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
